--- a/hugo/public/404.html
+++ b/hugo/public/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=&amp;path=livereload" data-no-instant defer></script>
+    <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=80&amp;path=livereload" data-no-instant defer></script>
         <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
@@ -10,7 +10,7 @@
 <meta name="keywords" content="homepage, blog" />
 <meta name="robots" content="noodp" />
 <meta name="theme-color" content="" />
-<link rel="canonical" href="https://johnpearsall.com/404.html" />
+<link rel="canonical" href="https://staging.johnpearsall.com:80/404.html" />
 
 
     <title>
@@ -39,22 +39,22 @@
 
   <meta itemprop="name" content="404 Page not found">
   <meta itemprop="description" content="Personal and professional insights and anecdotes.">
-  <meta itemprop="image" content="https://johnpearsall.com/">
+  <meta itemprop="image" content="https://staging.johnpearsall.com:80/">
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="https://johnpearsall.com/">
+  <meta name="twitter:image" content="https://staging.johnpearsall.com:80/">
   <meta name="twitter:title" content="404 Page not found">
   <meta name="twitter:description" content="Personal and professional insights and anecdotes.">
 
 
 
-    <meta property="og:url" content="https://johnpearsall.com/404.html">
+    <meta property="og:url" content="https://staging.johnpearsall.com:80/404.html">
   <meta property="og:site_name" content="Greetings from Cyberspace!">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:description" content="Personal and professional insights and anecdotes.">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
-    <meta property="og:image" content="https://johnpearsall.com/">
+    <meta property="og:image" content="https://staging.johnpearsall.com:80/">
 
 
 
@@ -139,9 +139,9 @@
             <h1>404</h1>
             <p>Oops, page not found…</p>
             <p class="btn-404">
-                <a href="https://johnpearsall.com/">
+                <a href="https://staging.johnpearsall.com:80/">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>Home</a>
-                <a href="https://johnpearsall.com/posts">
+                <a href="https://staging.johnpearsall.com:80/posts">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-archive"><polyline points="21 8 21 21 3 21 3 8"></polyline><rect x="1" y="3" width="22" height="5"></rect><line x1="10" y1="12" x2="14" y2="12"></line></svg>Archives</a>
             </p>
         </div>
@@ -155,9 +155,9 @@
     <div class="footer__inner">
         <div class="footer__content">
             <span>&copy; 2024</span>
-            <span><a href="https://johnpearsall.com/"></a></span>
+            <span><a href="https://staging.johnpearsall.com:80/"></a></span>
             
-            <span><a href="https://johnpearsall.com/posts/index.xml" target="_blank" title="rss"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 20 20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg></a></span>
+            <span><a href="https://staging.johnpearsall.com:80/posts/index.xml" target="_blank" title="rss"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 20 20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg></a></span>
             
         </div>
     </div>
